add header & search

--- a/index.html
+++ b/index.html
@@ -33,46 +33,91 @@
 				</div>
 				<div class="header__content">
 					<h1 class="header__content-title">Discover Your Life, Travel Where You Want</h1>
-					<p class="header__content-text">Would you explore natur paradise in the world, let’s find the best destination in world with us.</p>
+					<p class="header__content-text">Would you explore natur paradise in the world, let’s find the best destination
+						in world with us.</p>
 				</div>
 			</div>
 		</header>
 		<main class="main">
-			<div class="container">
-				<section class="choice">
-					<div class="choice__marker">
-						<div class="choice__marker-flight">Flight</div>
-						<div class="choice__marker-hotel">Hotel</div>
-					</div>
-					<div class="choice__details">
-						<div class="choice__direction">
+			<section class="search container">
 
+					<div class="search__tabs">
+						<div class="search__tab search__tab--active">
+							<div class="search__tab-icon">
+								<img src="icons/airplane-turn.png" alt="airplane">
+							</div>
+							<span>Flight</span>
 						</div>
-						<div class="choice__dates">
-
+						<div class="search__tab search__tab">
+							<div class="search__tab-icon">
+								<img src="icons/hotel.png" alt="hotel">
+							</div>
+							<span>Hotel</span>
 						</div>
 					</div>
-				</section>
 
-				<section class="special">
+					<div class="search__details">
+						<div class="details__items">
+							<div class="detail__item">
+								<form class="town-from">
+									<label for="town-from">Living From</label><br>
+									<input type="text" name="town-from" placeholder="Dubai">
+								</form>
+							</div>
 
-				</section>
+							<div class="detail__icon">
+								<img src="icons/airplane-round.png" alt="airplane">
+							</div>
+
+							<div class="detail__item">
+								<form clacc="town-to">
+									<label for="town-to">Going to</label><br>
+									<input type="text" name="town-to" placeholder="New York">
+								</form>
+							</div>
+						</div>
+
+						<div class="details__items details__items--data">
+							<div class="detail__item detail__item--data">
+								<form class="data__return">
+									<label class="data__label-leave" for="data-return">Leave</label>
+									<input type="text" name="data-return" placeholder="23 Jan, Sat">
+								</form>
+
+							</div>
+							<div class="detail__icon detail__icon--data">
+								<img src="icons/planner.png" alt="airplane">
+							</div>
+							<div class="detail__item detail__item--data">
+								<form clacc="data__leave">
+									<label class="data__label-return" for="data-leave">Going to</label>
+									<input type="text" name="data-leave" placeholder="14 Jan, Thu">
+								</form>
+
+							</div>
+						</div>
+
+					 <button class="search__btn">
+							<img src="icons/search.png" alt="search">
+						</button> 
+
+					</div>
+
+			</section>
+
+			<section class="special">
+
+			</section>
 
 
-
-			</div>
 		</main>
 		<footer class="footer">
-<div class="container">
-	-----------------------------------------------------------<br>
-	Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, quam esse eligendi id quod, velit quibusdam, corporis
-	provident molestiae fugiat culpa laborum a. Beatae aliquam laudantium commodi autem, consequuntur velit!
-	Iusto, hic! Voluptate error itaque doloribus quaerat saepe perferendis dolorum ullam harum, commodi, ratione ipsum autem
-	laudantium, necessitatibus suscipit adipisci aperiam natus consequuntur sapiente culpa ipsa debitis nisi! Possimus,
-	dolores!
-	Laborum accusantium rerum illo saepe doloribus? Ad illo enim eaque eveniet unde maiores mollitia nemo ullam dolore harum
-	libero consequatur minima provident, sed optio iusto voluptates soluta non commodi ea.
-</div>
+			<div class="container">
+				-----------------------------------------------------------<br>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, quam esse eligendi id quod, velit quibusdam,
+				corporis
+				provident molestiae fugiat culpa laborum a. Beatae aliquam
+			</div>
 		</footer>
 	</div>
 </body>
