--- a/index.html
+++ b/index.html
@@ -39,76 +39,171 @@
 			</div>
 		</header>
 		<main class="main">
-			<section class="search container">
+			<div class="search container">
 
-					<div class="search__tabs">
-						<div class="search__tab search__tab--active">
-							<div class="search__tab-icon">
-								<img src="icons/airplane-turn.png" alt="airplane">
-							</div>
-							<span>Flight</span>
+				<div class="search__tabs">
+					<div class="search__tab search__tab--active">
+						<div class="search__tab-icon">
+							<img src="icons/airplane-turn.png" alt="airplane">
 						</div>
-						<div class="search__tab search__tab">
-							<div class="search__tab-icon">
-								<img src="icons/hotel.png" alt="hotel">
-							</div>
-							<span>Hotel</span>
+						<span>Flight</span>
+					</div>
+					<div class="search__tab search__tab">
+						<div class="search__tab-icon">
+							<img src="icons/hotel.png" alt="hotel">
+						</div>
+						<span>Hotel</span>
+					</div>
+				</div>
+
+				<div class="search__details">
+					<div class="details__items">
+						<div class="detail__item">
+							<form class="town-from">
+								<label for="town-from">Living From</label><br>
+								<input type="text" name="town-from" placeholder="Dubai">
+							</form>
+						</div>
+
+						<div class="detail__icon">
+							<img src="icons/airplane-round.png" alt="airplane">
+						</div>
+
+						<div class="detail__item">
+							<form clacc="town-to">
+								<label for="town-to">Going to</label><br>
+								<input type="text" name="town-to" placeholder="New York">
+							</form>
 						</div>
 					</div>
 
-					<div class="search__details">
-						<div class="details__items">
-							<div class="detail__item">
-								<form class="town-from">
-									<label for="town-from">Living From</label><br>
-									<input type="text" name="town-from" placeholder="Dubai">
-								</form>
-							</div>
+					<div class="details__items details__items--date">
+						<div class="detail__item detail__item--date">
+							<form class="date__return">
+								<label class="date__label-leave" for="date-return">Leave</label>
+								<input type="text" name="date-return" placeholder="23 Jan, Sat">
+							</form>
 
-							<div class="detail__icon">
-								<img src="icons/airplane-round.png" alt="airplane">
-							</div>
-
-							<div class="detail__item">
-								<form clacc="town-to">
-									<label for="town-to">Going to</label><br>
-									<input type="text" name="town-to" placeholder="New York">
-								</form>
-							</div>
 						</div>
-
-						<div class="details__items details__items--data">
-							<div class="detail__item detail__item--data">
-								<form class="data__return">
-									<label class="data__label-leave" for="data-return">Leave</label>
-									<input type="text" name="data-return" placeholder="23 Jan, Sat">
-								</form>
-
-							</div>
-							<div class="detail__icon detail__icon--data">
-								<img src="icons/planner.png" alt="airplane">
-							</div>
-							<div class="detail__item detail__item--data">
-								<form clacc="data__leave">
-									<label class="data__label-return" for="data-leave">Going to</label>
-									<input type="text" name="data-leave" placeholder="14 Jan, Thu">
-								</form>
-
-							</div>
+						<div class="detail__icon detail__icon--date">
+							<img src="icons/planner.png" alt="airplane">
 						</div>
-
-					 <button class="search__btn">
-							<img src="icons/search.png" alt="search">
-						</button> 
-
+						<div class="detail__item detail__item--date">
+							<form clacc="date__leave">
+								<label class="date__label-return" for="date-leave">Going to</label>
+								<input type="text" name="date-leave" placeholder="14 Jan, Thu">
+							</form>
+						</div>
 					</div>
 
+					<button class="search__btn">
+						<img src="icons/search.png" alt="search">
+					</button>
+				</div>
+			</div>
+
+			<section class="special container">
+				<h2 class="special__title">
+					Special Upcoming Offers
+				</h2>
+				<div class="tabs">
+					<div class="tabs__item tabs__item--active">Team</div>
+					<div class="tabs__item">Couple</div>
+					<div class="tabs__item">Family</div>
+				</div>
+
+				<div class="cards">
+					<div class="card">
+						<div class="card__show">
+							<img class="card__img" src="images/spec-img1.jpg" alt="Loga Sea">
+							<div class="card__date"><span>14 FEB 2020</span></div>
+						</div>
+						<div class="card__info">
+							<div class="card__details">
+								<span class="card__type">Relax</span>
+								<span class="card__duration">3 Days, 3 Nights</span>
+							</div>
+							<h3 class="card__title">Loga Sea</h3>
+							<div class="card__book">
+								<p class="card__price"><span>700$</span>/Person</p>
+								<button class="card__btn">Book Now</button>
+							</div>
+						</div>
+					</div>
+
+					<div class="card">
+						<div class="card__show">
+							<img class="card__img" src="images/spec-img2.jpg" alt="Loga Sea">
+							<div class="card__date">
+								<span>18 JUN 2022</span>
+							</div>
+						</div>
+						<div class="card__info">
+							<div class="card__details">
+								<span class="card__type">Adventure</span>
+								<span class="card__duration">4 Days, 3 Nights</span>
+							</div>
+							<h3 class="card__title">Ansgar Scheffold</h3>
+							<div class="card__book">
+								<p class="card__price"><span>400$</span>/Person</p>
+								<button class="card__btn">Book Now</button>
+							</div>
+						</div>
+					</div>
+
+					<div class="card">
+						<div class="card__show">
+							<img class="card__img" src="images/spec-img3.jpg" alt="Loga Sea">
+							<div class="card__date"><span>22 DEC 2022</span></div>
+						</div>
+						<div class="card__info">
+							<div class="card__details">
+								<span class="card__type">Relax</span>
+								<span class="card__duration">7 Days, 6 Nights</span>
+							</div>
+							<h3 class="card__title">Lona X</h3>
+							<div class="card__book">
+								<p class="card__price"><span>340$</span>/Person</p>
+								<button class="card__btn">Book Now</button>
+							</div>
+						</div>
+					</div>
+				</div>
 			</section>
 
-			<section class="special">
+			<section class="about container">
+				<div class="about__statistics">
+					<img src="images/about-img.jpg" alt="about-img">
+					<div class="about__badge">
+						<span>5000+</span>
+						<p>Tourists</p>
+					</div>
 
+					<div class="about__badge about__badge--top">
+						<span>300+</span>
+						<p>Destinations</p>
+					</div>
+					
+					<div class="about__badge about__badge--bottom">
+						<span>150+</span>
+						<p>Hotels</p>
+					</div>
+				</div>
+				<div class="about__content">
+					<h2 class="about__title">Travel Any Corner of The World With Us</h2>
+					<div class="about__text">
+						<p>Would you explore nature paradise in the world, let’s find the best destination in world with us,
+							Would you explore
+							nature paradise in the world, let’s find the best destination in world with us. Would you explore nature
+							paradise in
+							the
+							world, let’s find the best destination in world with us.</p>
+						<p>Would you explore nature paradise in the world, let’s find the best destination in world with us.
+						</p>
+					</div>
+					<button class="about__btn">Contact Us</button>
+				</div>
 			</section>
-
 
 		</main>
 		<footer class="footer">
