add section-recommended destination

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						</div>
 						<div class="card__info">
 							<div class="card__details">
-								<span class="card__type">Adventure</span>
+								<span class="card__type card__type--advent">Adventure</span>
 								<span class="card__duration">4 Days, 3 Nights</span>
 							</div>
 							<h3 class="card__title">Ansgar Scheffold</h3>
@@ -183,7 +183,7 @@
 						<span>300+</span>
 						<p>Destinations</p>
 					</div>
-					
+
 					<div class="about__badge about__badge--bottom">
 						<span>150+</span>
 						<p>Hotels</p>
@@ -205,15 +205,99 @@
 				</div>
 			</section>
 
-		</main>
-		<footer class="footer">
-			<div class="container">
-				-----------------------------------------------------------<br>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, quam esse eligendi id quod, velit quibusdam,
-				corporis
-				provident molestiae fugiat culpa laborum a. Beatae aliquam
-			</div>
-		</footer>
+			<section class="destination container">
+				<h2 class="destination__title">
+					Recommended Destination
+				</h2>
+				<div class="tabs tabs--opacity">
+					<div class="tabs__item tabs__item--active">Populor</div>
+					<div class="tabs__item">Adventure</div>
+					<div class="tabs__item">Beath</div>
+				</div>
+
+				<div class="destination__cards">
+					<div class="card card--destination">
+						<div class="card__show">
+							<img class="card__img" src="images/dest-img1.jpg" alt="Loga Sea">
+							<div class="card__badge">
+								<img src="icons/star.png" alt="star">
+								<p class="card__badge-num">3.4</p>
+							</div>
+						</div>
+						<div class="card__content">
+							<h3 class="card__title">Kina Mountain</h3>
+							<div class="card__location">
+								<img src="icons/location.png" alt="location">
+								<p>Cambodia</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="card card--destination">
+						<div class="card__show">
+							<img class="card__img" src="images/dest-img2.jpg" alt="Loga Sea">
+							<div class="card__badge">
+								<img src="icons/star.png" alt="star">
+								<p class="card__badge-num">4.2</p>
+							</div>
+						</div>
+						<div class="card__content">
+							<h3 class="card__title">Kina Mountain</h3>
+							<div class="card__location">
+								<img src="icons/location.png" alt="location">
+								<p>Cambodia</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="card card--destination">
+						<div class="card__show">
+							<img class="card__img" src="images/dest-img3.jpg" alt="Loga Sea">
+							<div class="card__badge">
+								<img src="icons/star.png" alt="star">
+								<p class="card__badge-num">4.5</p>
+							</div>
+						</div>
+						<div class="card__content">
+							<h3 class="card__title">Kina Mountain</h3>
+							<div class="card__location">
+								<img src="icons/location.png" alt="location">
+								<p>Cambodia</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="card card--destination">
+						<div class="card__show">
+							<img class="card__img" src="images/dest-img4.jpg" alt="Loga Sea">
+							<div class="card__badge">
+								<img src="icons/star.png" alt="star">
+								<p class="card__badge-num">3.5</p>
+							</div>
+						</div>
+						<div class="card__content">
+							<h3 class="card__title">Kina Mountain</h3>
+							<div class="card__location">
+								<img src="icons/location.png" alt="location">
+								<p>Cambodia</p>
+							</div>
+						</div>
+					</div>
+				</div>
+	</div>
+
+
+	</section>
+
+	</main>
+	<footer class="footer">
+		<div class="container">
+			-----------------------------------------------------------<br>
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, quam esse eligendi id quod, velit quibusdam,
+			corporis
+			provident molestiae fugiat culpa laborum a. Beatae aliquam
+		</div>
+	</footer>
 	</div>
 </body>
 
